# gRPCTesting

./: .gitignore  pyproject.toml  readme.md
src/: client.py  myservice.proto  myservice_pb2.py  myservice_pb2_grpc.py  server.py
tests/: conftest.py  pytest.ini
tests/grpc_test/: conftest.py  test_events.py
utils/assertions/base/: assertion_base.py  assertion_mixin.py  assertion_types.py
utils/assertions/grpc/: grpc_objects.py
utils/logger_loguru/: logger.py
